2005-10-21  Andreas Kupries <andreask@activestate.com>

	* asn.test: Fixed typos, new and old.

2005-10-18  Andreas Kupries <andreask@activestate.com>

	* asn.test:     Package requires 8.4, this was not caught
	* pkgIndex.tcl: properly in index, nor in testsuite.

	* asn.bench: New file, benchmarks, only basics for now.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-04-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* asn.man:      Synchronized indexed/provided versions.
	* pkgIndex.tcl:

2005-02-09  Michael Schlenker <mic42@users.sourceforge.net>

	* asn.tcl:
	* asn.man:
	* asn.test: Fixed incorrect length encoding and decoding .
	  Added 64-bit support for length encoding/decoding,
	  Added 64-bit support for integers. 
	  Added tests for length encoding/decoding (10.x-11.x).
	  Added tests for 64-bit integers.
	  Bumped version number to 0.4
	  The package now needs Tcl 8.4 for wide() support.
	  
2004-12-29  Michael Schlenker <mic42@users.sourceforge.net>

	* asn.tcl: 
	* asn.man:  
	* asn.test: Added more encoder functions
	  to the module. 
	* Added math::bignum support for encoding
	  and decoding large integers. Interface not
	  final, so no docs yet.
	* Fixed bug with negative 3-byte integers in 
	  asn::asnInteger, those were padded with 0x00 instead 
	  of 0xff and added test for this (2.25).
	* Added tests for null, boolean encoding and decoding
	  and for bignum integer encoding (5.x-9.x).
	* Removed second signed-unsigned conversion for the tags
	  in error messages, asnGetByte returns unsigned tags.
	* bumped version number to 0.3
	
2004-10-05  Michael Schlenker <mic42@users.sourceforge.net>
        
        * asn.tcl: Added more decoder functions to the module.
        * asn.man: New primitve Types supported:
          OBJECT IDENTIFIER,BIT STRING,UTCTIME,BOOLEAN,
          PRINTABLE STRING, IA5 STRING, NULL